[tool.poetry]
name = "pythoneda-infrastructure-base"
version = "0.0.1a10"
description = "Infrastructure layer for PythonEDA"
authors = ["rydnr <github@acm-sl.org>"]
readme = "README.md"
homepage = "https://github.com/pythoneda-infrastructure/base"
packages = [{include = "pythonedainfrastructure"}]

[tool.poetry.dependencies]
python = "^3.8"
pythoneda-base = "^0.0.1a14"
requests = "^2.28.1"
grpcio = "^1.41.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
generate-grpc = "scripts.make_grpc:main"
