[tool.poetry]
name = "pythoneda-shared-infrastructure"
version = "0.0.1a13"
description = "Shared kernel for infrastructure layers"
authors = ["rydnr <github@acm-sl.org>"]
readme = "README.md"
homepage = "https://github.com/pythoneda-shared/infrastructure"
packages = [{include = "pythonedainfrastructure"}]

[tool.poetry.dependencies]
dbus-next = "^0.2.3"
python = "^3.8"
pythoneda-shared-pythoneda = "^0.0.1a23"
requests = "^2.28.1"
grpcio = "^1.41.0"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
generate-grpc = "scripts.make_grpc:main"
