[metadata]
name = pythoneda-infrastructure-layer
version = 0.0.1a2
author = rydnr
author_email = github@acm-sl.org
description = Common classes for infrastructure layers of PythonEDA projects
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/rydnr/pythoneda-infrastructure-layer
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent

[options]
packages = PythonEDAInfrastructure
python_requires = >=3.6

[options.extras_require]
test =
    pytest

[tool:pytest]
testpaths = tests
